2007-02-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico0.tcl (::ico::readDIBFromData): correct row calc for edge
	case.  Bump version to 0.3.1

	* ico.tcl (::ico::getFileIcon): fixed for better overall support.
	[Bug 1660234] (Griffiths).
	Bumped version to 1.0.2

2006-12-14  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl: fixed problem in EXEtoICO and incremented version to 1.0.1

2006-12-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico.tcl (::ico::getFileIcon): fixed missing close ]

2006-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico0.tcl: added back ico 0.3 for compatibility
	* pkgIndex.tcl: note both 0.3 and 1.0 exist

2006-07-18  Andreas Kupries  <andreask@gactivestate.com>

	* ico.man: Fixed syntax problems in the manpage.

2006-07-11  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl: many changes to add support for icon groups
	* ico.man: many changes to reflect new commands and usage
	**** update to v1.0 POTENTIAL INCOMPATIBILITY ****
	
2005-11-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4.1 ========================
	* 

2005-11-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.4 ========================
	* 

2005-05-28  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl fixed padding algorithm to handle icons >48px

2005-05-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico.tcl (::ico::Show): handle >48px icons by resizing the frame.
	Currently >48px icons are not decoded properly by ico though.

2004-08-20  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl bugfix in writeIconEXE, called SearchForIcos
	with wrong args

2004-08-20  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl: added writing of BMP and ICODATA types.

2004-08-18  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl: added support for reading from BMP files
	Modified transparentColor to work on pixel list also.